syntax = "proto3";

package task;

option go_package = "./proto/task";

service TaskService {
  rpc ScheduleTask (TaskRequest) returns (TaskResponse);
  rpc GetTaskStatus (TaskStatusRequest) returns (TaskStatusResponse);
}

message TaskRequest {
  string id = 1;
  string name = 2;
}

message TaskResponse {
  string id = 1;
  string status = 2;
}

message TaskStatusRequest {
  string id = 1;
}

message TaskStatusResponse {
  string id = 1;
  string status = 2;
}
